# Autoware

./: .gitlab-ci.yml  .travis.yml
docker/crossbuild/: Dockerfile.kinetic-crossbuild  Dockerfile.kinetic-crossbuild-driveworks  build_cross_image.sh
ros/: colcon_release  colcon_release_cross
ros/src/common/cmake/autoware_build_flags/: package.xml
ros/src/common/cmake/autoware_build_flags/cmake/: autoware_build_flags-extras.cmake
ros/src/common/libs/amathutils_lib/: package.xml
ros/src/common/libs/diagnostics_lib/diag_lib/: package.xml
ros/src/common/libs/diagnostics_lib/fake_autoware_nodes/: package.xml
ros/src/common/libs/state_machine_lib/: package.xml
ros/src/common/libvectormap/: CMakeLists.txt  package.xml
ros/src/computing/perception/detection/lidar_tracker/libs/fusion/: CMakeLists.txt  package.xml
ros/src/computing/perception/detection/lidar_tracker/libs/fusion/include/fusion/: fusion_func.h
ros/src/computing/perception/detection/lidar_tracker/libs/fusion/src/: fusion.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/: CMakeLists.txt  package.xml
ros/src/computing/perception/detection/trafficlight_recognizer/lib/: Context.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/feat_proj/: feat_proj.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/region_tlr/: region_tlr.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/region_tlr_mxnet/: region_tlr_mxnet.cpp  region_tlr_mxnet.h
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/region_tlr_ssd/: region_tlr_ssd.cpp  region_tlr_ssd.h
ros/src/computing/perception/detection/trafficlight_recognizer/nodes/roi_extractor/: roi_extractor.cpp  roi_extractor.h
ros/src/computing/perception/detection/vision_detector/libs/dpm_ttic/: package.xml
ros/src/computing/perception/detection/vision_tracker/libs/kf/: CMakeLists.txt  package.xml
ros/src/computing/perception/detection/vision_tracker/libs/kf/src/: kf_lib.cpp
ros/src/computing/perception/localization/lib/gnss/: package.xml
ros/src/computing/perception/localization/lib/ndt_cpu/: package.xml
ros/src/computing/perception/localization/lib/ndt_gpu/: package.xml
ros/src/computing/perception/localization/lib/ndt_tku/: package.xml
ros/src/computing/perception/localization/lib/pcl_omp_registration/: package.xml
ros/src/computing/planning/common/lib/openplanner/op_planner/: package.xml
ros/src/computing/planning/common/lib/openplanner/op_ros_helpers/: CMakeLists.txt  package.xml
ros/src/computing/planning/common/lib/openplanner/op_ros_helpers/include/op_ros_helpers/: op_ROSHelpers.h
ros/src/computing/planning/common/lib/openplanner/op_ros_helpers/src/: op_ROSHelpers.cpp
ros/src/computing/planning/common/lib/openplanner/op_simu/: package.xml
ros/src/computing/planning/common/lib/openplanner/op_utility/: CMakeLists.txt  package.xml
ros/src/computing/planning/state/state_machine/: package.xml
ros/src/msgs/autoware_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/src/msgs/autoware_detection_msgs/msg/: DetectedObject.msg
ros/src/msgs/autoware_image_msgs/: CMakeLists.txt  package.xml
ros/src/msgs/autoware_msgs/: CMakeLists.txt
ros/src/simulation/lgsvl_simulator_bridge/: package.xml
ros/src/system/gazebo/catvehicle/: package.xml
ros/src/system/gazebo/laser_scan_converter/: package.xml
ros/src/system/gazebo/point_cloud_converter/: package.xml
ros/src/system/gazebo/twist_cmd_converter/: package.xml
ros/src/system/sync/: CMakeLists.txt  package.xml  time_monitor.cpp
