<?xml version="1.0"?>
<package format="2">
  <name>autoware_build_flags</name>
  <version>1.9.1</version>
  <description>Common build flags for Autoware.</description>

  <author email="esteve@apache.org">Esteve Fernandez</author>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
