<?xml version="1.0"?>
<package format="2">
    <name>gnss</name>
    <version>1.9.1</version>
    <description>The gnss package</description>
    <maintainer email="tomo@axe.bz">Tomomi HORII</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>roscpp</build_depend>

    <exec_depend>roscpp</exec_depend>

</package>
