<?xml version="1.0"?>
<package format="2">
    <name>kf_lib</name>
    <version>1.6.3</version>
    <description>The kf package</description>
    <maintainer email="abrahammonrroy@yahoo.com">Abraham</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>autoware_msgs</build_depend>

    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>autoware_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>image_transport</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>
